--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
           <div class="row mt-80 mt-xs-40 mb-80 mb-xs-40 team-slider">
               <div class="col-sm-12">
              
-              <figure class="team-item"><img src="img/team/cody.jpg" style="width: 200px; height: 200px;" alt="Cody" class="resp img-circle">
+              <figure class="team-item"><img src="img/team/team-img3.jpg" style="width: 200px; height: 200px;" alt="Cody" class="resp img-circle">
                 <div class="social-links team-social"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                 <!--   <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-behance"></i></a> -->
                 </div>
@@ -371,7 +371,7 @@
             </div>
             <div class="col-sm-12">
 
-              <figure class="team-item"><img src="img/team/denise.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
+              <figure class="team-item"><img src="img/team/service-img.png" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
                 <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
              <!--      <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-linkedin"></i></a> -->
                 </div>
