--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h4 class="alt-font">Some interesting facts</h4>
+                <h4 class="alt-font">CrossFit Dunkrik Facts </h4>
               </div>
             </div>
             <div class="row mt-60">
@@ -150,7 +150,8 @@
             </div>
           </div>
         </div>
-        <div class="container">
+
+<!--         <div class="container">
           <div class="row mt-80 mt-xs-40">
             <div class="col-sm-6">
               <blockquote class="about-quote">
@@ -172,7 +173,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
       <!--Start section Service-->
       <section id="service" class="pb-40">
@@ -193,9 +194,9 @@
             </div>
             <div class="col-sm-4 text-center">
               <div class="service-item"><i class="icon-circle-compass"></i>
-                <h5 class="alt-font">Beginner Classes</h5>
+                <h5 class="alt-font">Introductory Services</h5>
                 <div class="service-desc">
-                  <p> This is a 12 session course that starts with a discussion about how class works and what to expect. All the major barbell lifts will be taught in great detail with an emphasis on movement and technique.</p>
+                  <p> For the first month you get 1-1 training before the class starts to learn and practice the movements. Our new clients love this service, as they then enter the class safely and confidently.</p>
                 </div>
               </div>
             </div>
@@ -353,7 +354,7 @@
           <div class="row mt-80 mt-xs-40 mb-80 mb-xs-40 team-slider">
               <div class="col-sm-12">
              
-              <figure class="team-item"><img src="img/team/team-img3.jpg" style="width: 200px; height: 200px;" alt="Cody" class="resp img-circle">
+              <figure class="team-item"><img src="img/team/barbell.jpg" style="width: 200px; height: 200px;" alt="Cody" class="resp img-circle">
                 <div class="social-links team-social"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                 <!--   <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-behance"></i></a> -->
                 </div>
@@ -371,7 +372,7 @@
             </div>
             <div class="col-sm-12">
 
-              <figure class="team-item"><img src="img/team/service-img.png" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
+              <figure class="team-item"><img src="img/team/dumbell.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
                 <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
              <!--      <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-linkedin"></i></a> -->
                 </div>
@@ -386,11 +387,13 @@
                 </figcaption>
               </figure>
             </div>
-  <!--             <div class="col-sm-12">
-                <figure class="team-item"><img src="img/team/p3.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
-                  <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a><a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-vk"></i></a></div>
+              <div class="col-sm-12">
+                <figure class="team-item"><img src="img/team/box.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
+                  <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                    <!-- <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-vk"></i></a> -->
+                  </div>
                   <figcaption>
-                    <h5 class="alt-font">Harvy Specter <small>Designer</small></h5>
+                    <h5 class="alt-font">Andy Valentine <small>Coach</small></h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
                   </figcaption>
                 </figure>
@@ -403,7 +406,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
                   </figcaption>
                 </figure>
-              </div> -->
+              </div>
           </div>
         </div>
         <!--Testimonial slider start-->
@@ -432,8 +435,8 @@
                   <div class="section-icon"><span class="icon-quote"></span></div>
                   <h3 class="alt-font">What people are saying</h3>
                   <blockquote class="testimonial">
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur reprehenderit praesentium repellat officia ea corrupti rem architecto soluta, necessitatibus sequi.</p>
-                    <footer class="testimonial-author">Lary Clark, Pied Piper</footer>
+                    <p> When I convinced my best friend that we needed to try CrossFit, I was just trying to get us out of our boring walking routine. I didn’t think I would love it as much as I do. I never imagined how much mobility, stamina, strength and most importantly -support, I would gain. CrossFit really is for everyone at every fitness level. I need to scale down everything we do but that doesn’t stop me from getting a great work out and having a good time. The workouts help me  take care of my body and the people help me keep my head on straight. They are the best!</p>
+                    <footer class="testimonial-author">Kendell Baxter, 1YR CROSSFITTER</footer>
                   </blockquote>
                 </div>
               </div>
@@ -498,18 +501,18 @@
                 <div class="pricing-inner">
                   <div class="pricing-content">
                     <div class="pricing-icon"><i class="icon-bike"></i></div>
-                    <div class="pricing-title">Beginner</div>
+                    <div class="pricing-title">Starter Package</div>
                     <div class="pricing-features alt-font">
                       <ul class="sf-list pricing-list">
-                        <li><b>6  </b>Days of Classes</li>
-                        <li> <b>Access  </b>To Open Gym</li>
-                        <li> <b>Free </b>Wednesdays</li>
-                        <li> <b>Free </b>Support</li>
+                        <li><b>1  </b>Month of Membership</li>
+                        <li> <b>6  </b>Days of Classes</li>
+                        <li> <b>4 </b>Thirty minute 1-1 sessions</li>
+                       <!--  <li> <b>Free </b>Support</li> -->
                       </ul>
                     </div>
-                    <div class="pricing-cost"><sup>$</sup>35</div>
+                    <div class="pricing-cost"><sup>$</sup>55</div>
                     <div class="pricing-period">month</div>
-                    <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div>
+                    <!-- <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div> -->
                   </div>
                 </div>
               </div>
@@ -524,13 +527,13 @@
                       <ul class="sf-list pricing-list">
                         <li><b>All  </b>Classes and Open Gym</li>
                         <li> <b>Discounts  </b>for Police, EMT, Military, Fire Fighters</li>
-                        <li> <b>Access </b>To Project Athlete</li>
+                        <!-- <li> <b>Access </b>To Project Athlete</li> -->
                         <li> <b>Special Rates </b>for Family and College Students</li>
                       </ul>
                     </div>
-                    <div class="pricing-cost"><sup>starting @ $</sup>55</div>
+                    <div class="pricing-cost"><sup>starting @ $</sup>70</div>
                     <div class="pricing-period">month</div>
-                    <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div>
+                    <!-- <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div> -->
                   </div>
                 </div>
               </div>
@@ -544,14 +547,14 @@
                     <div class="pricing-features alt-font">
                       <ul class="sf-list pricing-list">
                         <li><b>Drop In  </b> Day Pass @$10, Weekly @$25</li>
-                        <li> <b>Personal Training </b>@$26 a session</li>
+                        <li> <b>Personal Training </b>@$30 a session</li>
                         <li> <b>Online Programming </b>8 weeks @ $150</li>
-                        <li> <b>Project Athlete </b>@$10 a month</li>
+                        <li> <b>Discounts </b>available!</li>
                       </ul>
                     </div>
-                    <div class="pricing-cost"><sup>$</sup>100</div>
-                    <div class="pricing-period">month</div>
-                    <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div>
+                    <div class="pricing-cost"><sup>starting @ $</sup>10</div>
+                    <div class="pricing-period">day</div>
+                    <!-- <div class="pricing-button"><a href="#" class="btn btn-coffee">Buy Now</a></div> -->
                   </div>
                 </div>
               </div>
