--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 <figcaption>
                   <h5 class="alt-font">Cody Felt<small> Owner/Head Coach</small></h5>
                     <p style="font-style: italic; line-height: 18px;">8 years experience</p>
-                    <p>CF- Ll <br /> Minor in Coaching<br /> Personal Trainer<br /> Phystical Therapist Assistant</p>
+                    <p>CF-Ll <br /> Minor in Coaching<br /> Personal Trainer<br /> Phystical Therapist Assistant</p>
 
                     <p>Cody has worked with sports teams and individual athletes. He has experience working as a strength and conditioning coach in several sports, such as volleyball, basketball, baseball, golf, wrestling, football, boxing, kickboxing &amp; MMA. When it comes to crossfit, Cody is an active competitor and also loves to coach those who compete as well. His first love however, is and always has been, helping those who are considered to be on the spectrum. <br/><br/>Cody believes that fitness and health are obtainable with hard work and dedication. He has devoted his life to helping those achieve their goals by careing for every individual that steps through his door.
 
@@ -373,13 +373,12 @@
             <div class="col-sm-12">
 
               <figure class="team-item"><img src="img/team/dumbell.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
-                <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-             <!--      <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-linkedin"></i></a> -->
+                <div class="social-links team-social"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                 </div>
                 <figcaption>
                   <h5 class="alt-font">Denise Hayes<small>Owner/Coach</small></h5>
                     <p style="font-style: italic; line-height: 18px;">4 years experience</p>
-                    <p >CF- L1<br /> Registered Nurse</p>
+                    <p >CF-L1<br /> Registered Nurse</p>
 
                     <p>Denise is a former long distance runner who turned to loving the weightlifting and powerlifting aspects in CrossFit. She also enjoys competing in CrossFit events.<br/><br/>               Denise has been a part of CrossFit Dunkirk from the beginning. She loves to help out those in need and give ensures they alwayts get the attention they deserve. She espically enjoys caoching beginners and has a special place in her heart for geriatric clients. Denise is always there for her CrossFit community.
                     <br /><br /> Favorite quote: "Work works"<br />
@@ -389,25 +388,19 @@
             </div>
               <div class="col-sm-12">
                 <figure class="team-item"><img src="img/team/box.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
-                  <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <!-- <a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-vk"></i></a> -->
-                  </div>
+                  <div class="social-links team-social"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
+                   </div>
                   <figcaption>
                     <h5 class="alt-font">Andy Valentine <small>Coach</small></h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
+                    <p style="font-style: italic; line-height: 18px;">5 years experience</p>
+                    <p >CF-L1<br /> Master WineMaker</p>
+
+                    <p>Andy has always been intrigued by the world of fitnes. In high school he found his first passion - Powerlifting. Later, while learning and training in MMA, Kickboxing, Boxing, Muay Thai and Judo, he found CrossFit. Andy was immediately impressed with the way that CrossFit improved overall fitness and increased performance both physically and mentally in the ring. It was this fact that led Andy to commit to a lifestyle change to use CrossFit as a primary training style, one which fed his desire to help others as well. Andy is often the loudest voice in the room and will ensure you have a smile on your face while he is pushing you to test your boundaries. 
+                       <br /><br /> Favorite quote: "Life is not about how hard you can hit, it is about how hard you can get hit and keep moving forward"<br />
+                     </p>
                   </figcaption>
                 </figure>
               </div>
-              <div class="col-sm-12">
-                <figure class="team-item"><img src="img/team/p4.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
-                  <div class="social-links team-social"><a href="#" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a><a href="#" title="Twitter" target="_blank"><i class="fa fa-twitter"></i></a><a href="#" title="Behance" target="_blank"><i class="fa fa-vk"></i></a></div>
-                  <figcaption>
-                    <h5 class="alt-font">Mister Mike <small>Designer</small></h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit lacus, a iaculis diam.</p>
-                  </figcaption>
-                </figure>
-              </div>
-          </div>
         </div>
         <!--Testimonial slider start-->
         <div class="fullwidth-testimotal-slider bg-dark-80 pt-100 pb-100">
@@ -607,10 +600,10 @@
             <form id="mailchimp" class="form">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
-                  <h4 class="alt-font newsletter-title mb-50">Stay informed with news from our Box</h4>
-                  <input id="indput-subscribe" name="subscribe" type="email" placeholder="Enter your email here ..." class="form-control newsletter-input input-md mb-xxs-40">
+                  <h4 class="alt-font newsletter-title mb-50">Come Work Out With Us Today!</h4>
+<!--                   <input id="indput-subscribe" name="subscribe" type="email" placeholder="Enter your email here ..." class="form-control newsletter-input input-md mb-xxs-40">
                   <button class="btn btn-coffee btn-medium">Subscribe</button>
-                  <div id="subscribe-result"></div>
+                  <div id="subscribe-result"></div> -->
                 </div>
               </div>
             </form>
@@ -638,7 +631,7 @@
               <div class="col-sm-4 contact-item"><span class="icon-envelope"></span><a href="mailto:felt4434@fredonia.edu" target="_blank">felt4434@fredonia.edu</a></div>
             </div>
           </div>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-md-8 col-md-offset-2 mt-40">
               <form id="contact-form" class="form form-contact">
                 <div class="col-md-12">
@@ -661,7 +654,7 @@
                 </div>
               </form>
             </div>
-          </div>
+          </div> -->
         </div>
         
       </section>
@@ -670,12 +663,21 @@
       <footer class="page-footer">
         <div class="container text-center">
           <!-- Social links-->
-          <div class="social-links"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
 
-            <a href="https://journal.crossfit.com/" title="CrossFit Journal" target="_blank"><i class="fas fa-link"></i></a>
+      <section id="contacts" class="pt-0">
+        <div id="subscribe" class="small-section bg-dark-80">
+          <div class="container">         
+              <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center">                  
+                  <a href="https://journal.crossfit.com/" title="CrossFit Journal" target="_blank"><img src="img/crossfit-journal-light.png"; alt="crossfit journal link">
+                  </a>
+                </div>
+              </div>
+          </div>
+        </div>
 
-            <!-- <a href="#" title="Behance" target="_blank"><i class="fa fa-behance"></i></a><a href="#" title="Linkedin" target="_blank"><i class="fa fa-linkedin"></i></a><a href="#" title="Pinterst" target="_blank"><i class="fa fa-pinterest"></i></a> -->
-
+          <div class="social-links">
+            <a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
           </div>
           <div class="copy-right mt-50"><a href="#" class="alt-font">© Exline 2015</a>
             <p>Made with love</p>
