--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </div>
             </div><a href="#page" data-start="display: block" data-100-start="display: none" class="btn-scroll-down scroll"></a>
           </div>
-          <div data-background="img/full-width/snatch.jpg" class="full-screen bg-img bg-dark-50">
+          <div data-background="img/full-width/chalkmark.jpeg" class="full-screen bg-img bg-dark-50">
             <div class="hero-content">
               <!-- <div class="hero-content-inner"><a href="https://vimeo.com/79876010" class="magnific mfp-iframe"><span data-effect="rotateIn" class="icon-big-round animate-e"><i class="fa fa-play"></i></span></a> -->
               <h1 data-effect="zoomIn" class="hs-line-5 animate-e">Perform It</h1>
@@ -210,10 +210,10 @@
             </div>
             <div class="col-sm-4 text-center">
               <div class="service-item"><i class="icon-camera"></i>
-                <h5 class="alt-font">Photography</h5>
+                <h5 class="alt-font"><a href="https://slycloverphotography.shootproof.com/" target="_blank">Photography</a></h5>
                 <div class="service-desc">
-                  <p> Our very own member, Shannon Chumara does specialized workout photos for individuals and events!</p>
-                </div>
+                  <p> Our very own member, Shannon Chmura does specialized workout photos for individuals and events!</p>               
+               </div>
               </div>
             </div>
             <div class="col-sm-4 text-center">
@@ -372,7 +372,7 @@
             </div>
             <div class="col-sm-12">
 
-              <figure class="team-item"><img src="img/team/dumbell.jpg" style="width: 200px; height: 200px;" alt="200x200" class="resp img-circle">
+              <figure class="team-item"><img src="img/team/dumbell.jpg" style="width: 200px; height: 200px;" alt="dumbell" class="resp img-circle">
                 <div class="social-links team-social"><a href="https://www.facebook.com/groups/1492507014301664/?fref=nf" title="Facebook" target="_blank"><i class="fa fa-facebook"></i></a>
                 </div>
                 <figcaption>
